--- a/_includes/page-header.html
+++ b/_includes/page-header.html
@@ -1,5 +1,5 @@
 <section class="page-header">
-  <h1 class="project-name">{{ site.title }}</h1>
-  <h2 class="project-tagline">{{ site.tagline }}</h2>
-  <a href="https://AndreyTsvetkov.github.com" class="btn">Github Projects</a>
+    <h1 class="project-name"><a href="/">{{ site.title }}</a></h1>
+    <h2 class="project-tagline">{{ site.tagline }}</h2>
+    <a href="https://AndreyTsvetkov.github.com" class="btn">Github Projects</a>
 </section>
